--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,16 +22,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Ensure Cypress is executable
-        run: chmod +x ./node_modules/.bin/cypress
-
-      - name: Run Cypress tests
-        run: npx cypress run
-
-      # Optional: Save Cypress videos and screenshots as artifacts
-      - name: Upload test artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: cypress-artifacts
-          path: cypress/videos
+      - name: Install Cypress binary
+        run: npx cy
