--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,5 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Cypress binary
-        run: npx cy
+      - name: Install Cypress
+        run: npx cypress install
+
+      - name: Run Cypress tests
+        run: npx cypress run
