fix problem that Upload Cypress Artifacts dount work when tests fails

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,29 +8,31 @@ on:
 
 jobs:
   cypress-run:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      # Run Cypress tests using cypress-io/github-action
-      - name: Run Cypress Tests
+      - name: Install dependencies
+        run: npm ci
+
+      - name: List Cypress Artifacts
+        run: ls -R cypress || echo "No Cypress artifacts found"
+
+      - name: Run Cypress tests
         uses: cypress-io/github-action@v4
         with:
-          browser: chrome
-          runTests: true
           install: true
+          runTests: true
 
-      # Upload artifacts for debugging
       - name: Upload Cypress Artifacts
+        if: success() || failure()
         uses: actions/upload-artifact@v3
         with:
           name: cypress-artifacts
